arruma o swagger e adiciona rota que faltava
